[package]
name = "ractor"
version = "0.1.0"
description = "GNU coreutils factor command written in Rust"
authors = ["Bhattarapong Somwong <numbbutt34685@gmail.com>"]
keywords = ["factor", "gnu", "prime", "math"]
categories = ["command-line-utilities"]
homepage = "https://github.com/grindarius/ractor"
repository = "https://github.com/grindarius/ractor.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
